--- a/TimeLauncher/Properties/AndroidManifest.xml
+++ b/TimeLauncher/Properties/AndroidManifest.xml
@@ -3,4 +3,5 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:roundIcon="@mipmap/ic_mylauncher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:icon="@mipmap/ic_mylauncher"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
