--- a/TimeLauncher/TimeLauncher.csproj
+++ b/TimeLauncher/TimeLauncher.csproj
@@ -64,9 +64,9 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'RealSPRelease|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\実機用\</OutputPath>
+    <OutputPath>bin\RealSP\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <DebugType>portable</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -81,6 +81,7 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <MandroidI18n />
+    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -93,6 +94,7 @@
   <ItemGroup>
     <Compile Include="AppSelectActivity.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MyNoticeService.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeSelectActivity.cs" />
@@ -117,6 +119,9 @@
     <AndroidResource Include="Resources\drawable\web_hi_res_512.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit">
+      <Version>2.6.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.3" />
